static/css/soccer.css
/* -----------------  Styles only relevant to simulator.html  ----------------- */
h5 {
  font-weight: 400;
}

h2 {
  font-size: 1.8rem;
}

.form-item,
.result-item {
  padding: 2rem 0;
}

.select-card-header,
.results-card-header {
  background-color: #474749;
  color: #fbfbfb;
}

.select-card-body {
  background-color: #eeebeb;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.top-select-card {
  margin-bottom: 10px;
}

/* --------------  Results  --------------- */
.results-card-body {
  background-color: #f1f0f0;
  padding: .4rem 1.25rem 1rem;
}

.hide-body {
  padding: 0 !important;
}

.score-row {
  align-items: center;
}

.score {
  display: inline-block;
  font-size: 2.5rem;
}

.team1-name-col {
  padding: 0 6% 0 3%;
}

.team2-name-col {
  padding: 0 3% 0 6%;
}

.dash-col {
  padding: 0 3%;
}

/* ---------------  Events  ------------- */
.red-card {
  display: inline-block;
  background-color: red;
  width: 11px;
  height: 16px;
  border-radius: 2px;
}

.events {
  color: #3F3F44;
  line-height: 1.2;
}

.events-row {
  padding-top: .8rem;
}

.team1-event-min {
  padding: 0 2px 0 0;
}

.team2-event-min {
  padding: 0 0 0 2px;
}

.team1-event-name {
  padding-left: 5px;
}

.team2-event-name {
  padding-right: 5px;
}

@media screen and (min-width: 576px) {
  h2 {
    font-size: 2.25rem;
  }

  h5 {
    font-size: 1.5rem;
  }

  .select-card-header {
    padding: .75rem 1.25rem;
  }
}

@media screen and (min-width: 768px) {
  .results-card-body {
    padding: .4rem 5% 1rem;
  }

  .score {
    font-size: 3.2rem;
  }

  .events {
    font-size: 1.2rem;
  }
}

@media screen and (min-width: 960px) {
  h2 {
    font-size: 2.75rem;
  }

  .form-item,
  .result-item {
    padding-bottom: 5rem;
  }

  .select-card-body {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }

  .team1-name,
  .team2-name {
    font-size: 1.9rem;
  }

  .events-row {
    padding-top: 1rem;
  }

  .events {
    font-size: 1.3rem;
  }
}

@media screen and (min-width: 1200px) {
  .form-item,
  .result-item {
    padding-bottom: 6rem;
  }

  .score {
    font-size: 3.5rem;
  }

  .results-card-body {
    padding: .5rem 4% 1.1rem;
  }
}

